scylla_orm_table_to_struct/example/src/non_compiling_code/param_but_no_question_mark.rs
use scylla_orm_macro::query;

fn main() {
    query!("select * from test_table where b = ? and c = ?", b)
}